--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,9 @@
 services:
   db:
-    image: planetscale/pscale
+    image: mysql:8.0.36
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
