--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,10 @@
 services:
+  redis:
+    image: "redis"
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis/data:/data
   back:
     build:
       context: ./back
@@ -9,14 +15,33 @@ services:
       BUNDLE_WITHOUT: "null"
       BUNDLE_DEPLOYMENT: ""
       BUNDLE_PATH: "/app/.bundle"
+      REDIS_URL: "redis://redis:6379"
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
     volumes:
       - ./back:/app
       - /etc/ssl/cert.pem:/etc/ssl/cert.pem
+    depends_on:
+      - redis
     ports:
       - "3000:3000"
     tty: true
     stdin_open: true
+  worker:
+    build:
+      context: ./back
+      dockerfile: Dockerfile
+    user: "root"
+    environment:
+      RAILS_ENV: development
+      BUNDLE_WITHOUT: "null"
+      BUNDLE_DEPLOYMENT: ""
+      BUNDLE_PATH: "/app/.bundle"
+      REDIS_URL: "redis://redis:6379"
+    command: bundle exec sidekiq
+    volumes:
+      - ./back:/app
+    depends_on:
+      - redis
   front:
     build:
       context: ./front
