update: .gitignoreの書き方を統一

--- a/.gitignore
+++ b/.gitignore
@@ -3,51 +3,51 @@ redis/
 
 # ignoreing files for front directory
 # dependencies
-/front/node_modules
-/front/.pnp
-/front/.pnp.js
-/front/.yarn/install-state.gz
+front/node_modules
+front/.pnp
+front/.pnp.js
+front/.yarn/install-state.gz
 
 # testing
-/front/coverage
+front/coverage
 
 # next.js
-/front/.next/
-/front/out/
+front/.next/
+front/out/
 
 # production
-/front/build
+front/build
 
 # misc
-/front/.DS_Store
-/front/*.pem
+front/.DS_Store
+front/*.pem
 
 # debug
-/front/npm-debug.log*
-/front/yarn-debug.log*
-/front/yarn-error.log*
+front/npm-debug.log*
+front/yarn-debug.log*
+front/yarn-error.log*
 
 # local env files
-/front/.env*.local
+front/.env*.local
 
 # vercel
-/front/.vercel
+front/.vercel
 
 # typescript
-/front/*.tsbuildinfo
-/front/next-env.d.ts
+front/*.tsbuildinfo
+front/next-env.d.ts
 
 # ignoreing files for back directory
 # Ignore bundler config.
-/back/.bundle
+back/.bundle
 
 # Ignore all environment files (except templates).
-/back/.env*
-/back/!/.env*.erb
+back/.env*
+back/!/.env*.erb
 
 # Ignore all logfiles and tempfiles.
-/back/log/*
-/back/tmp/*
+back/log/*
+back/tmp/*
 !back/log/.keep
 !back/tmp/.keep
 
