--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,30 +1,32 @@
 # syntax = docker/dockerfile:1
+
 # Rubyのバージョンを指定
 ARG RUBY_VERSION=3.2.2
-FROM ruby:$RUBY_VERSION as base
+FROM ruby:$RUBY_VERSION-slim as base
 
 # アプリケーションのラベル設定
 LABEL fly_launch_runtime="rails"
 
 # アプリケーションの作業ディレクトリを設定
-WORKDIR /app
+WORKDIR /rails
 
 # 環境変数の設定
 ENV BUNDLE_DEPLOYMENT="1" \
     BUNDLE_PATH="/usr/local/bundle" \
     BUNDLE_WITHOUT="development:test" \
-    RAILS_ENV="production" \
-    TZ=Asia/Tokyo \
-    PATH=/app/bin:$PATH
+    RAILS_ENV="production"
 
 # RubyとBundlerの更新
 RUN gem update --system --no-document && \
     gem install -N bundler
 
-# ビルドに必要なパッケージをインストール
+
+# 最終イメージのサイズを削減するための一時的なビルドステージ
 FROM base as build
+
+# ビルドに必要なパッケージをインストール
 RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y build-essential default-libmysqlclient-dev nodejs npm
+    apt-get install --no-install-recommends -y build-essential default-libmysqlclient-dev
 
 # GemfileとGemfile.lockをコピーして依存関係をインストール
 COPY --link Gemfile Gemfile.lock ./
@@ -38,17 +40,18 @@ COPY --link . .
 # bootsnapでアプリケーションのブート時間を短縮
 RUN bundle exec bootsnap precompile app/ lib/
 
-# 最終的なアプリケーションイメージの作成
+
+# 最終的なアプリケーションイメージの作成ステージ
 FROM base
 
 # デプロイに必要なパッケージをインストール
 RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y curl default-mysql-client vim openssl ca-certificates && \
+    apt-get install --no-install-recommends -y curl default-mysql-client openssl ca-certificates && \
     rm -rf /var/lib/apt/lists /var/cache/apt/archives
 
 # ビルド段階で作成されたアーティファクト（gems, アプリケーションコード）をコピー
 COPY --from=build "${BUNDLE_PATH}" "${BUNDLE_PATH}"
-COPY --from=build /app /app
+COPY --from=build /rails /rails
 
 # セキュリティのため非rootユーザーで実行
 RUN groupadd --system --gid 1000 rails && \
@@ -56,8 +59,8 @@ RUN groupadd --system --gid 1000 rails && \
     chown -R 1000:1000 db log storage tmp
 USER 1000:1000
 
-# エントリポイントにより、PID削除とDBのマイグレーションを実行
-ENTRYPOINT ["/app/bin/docker-entrypoint"]
+# コンテナ起動時にdocker-entrypointを実行
+ENTRYPOINT ["/rails/bin/docker-entrypoint"]
 
 # コンテナの3000番ポートを開放
 EXPOSE 3000
