--- a/compose.yml
+++ b/compose.yml
@@ -1,53 +1,63 @@
 services:
-  redis:
-    image: "redis"
-    ports:
-      - "6379:6379"
+  front:
+    build:
+      context: ./front
+      dockerfile: Dockerfile
+    environment:
+      TZ: Asia/Tokyo
     volumes:
-      - ./redis/data:/data
+      - ./front:/app
+    command: yarn dev -p 4000
+    ports:
+      - "4000:4000"
+    networks:
+      fixed_compose_network:
+        ipv4_address: 172.27.0.2
   back:
     build:
       context: ./back
-      dockerfile: Dockerfile
-    user: "root"
+      dockerfile: Dockerfile.dev
     environment:
       RAILS_ENV: development
-      BUNDLE_WITHOUT: "null"
-      BUNDLE_DEPLOYMENT: ""
-      BUNDLE_PATH: "/app/.bundle"
+      TZ: Asia/Tokyo
       REDIS_URL: "redis://redis:6379"
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
     volumes:
       - ./back:/app
-      - /etc/ssl/cert.pem:/etc/ssl/cert.pem
     depends_on:
       - redis
     ports:
       - "3000:3000"
     tty: true
     stdin_open: true
+    networks:
+      fixed_compose_network:
+        ipv4_address: 172.27.0.3
   worker:
     build:
       context: ./back
-      dockerfile: Dockerfile
-    user: "root"
+      dockerfile: Dockerfile.dev
     environment:
       RAILS_ENV: development
-      BUNDLE_WITHOUT: "null"
-      BUNDLE_DEPLOYMENT: ""
-      BUNDLE_PATH: "/app/.bundle"
-      REDIS_URL: "redis://redis:6379"
-    command: bundle exec sidekiq
+      TZ: Asia/Tokyo
+    command: bash -c "bundle exec rake solid_queue:start"
     volumes:
       - ./back:/app
-    depends_on:
-      - redis
-  front:
-    build:
-      context: ./front
-      dockerfile: Dockerfile
-    volumes:
-      - ./front:/app
-    command: yarn dev -p 4000
+    networks:
+      fixed_compose_network:
+        ipv4_address: 172.27.0.4
+  redis:
+    image: "redis:alpine"
     ports:
-      - "8000:4000"
+      - "6379:6379"
+    volumes:
+      - ./redis/data:/data
+    networks:
+      fixed_compose_network:
+        ipv4_address: 172.27.0.5
+networks:
+  fixed_compose_network:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.27.0.0/24
