--- a/back/Gemfile
+++ b/back/Gemfile
@@ -43,6 +43,7 @@ end
 group :development do
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   # gem "spring"
+  gem 'annotate'
 end
 
 
