--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -3,6 +3,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "next/core-web-vitals",
-    "prettier"
+    "prettier",
+    "next",
+    "next/babel"
   ]
 }
