add: Railsテスト用設定を追加

--- a/back/Gemfile
+++ b/back/Gemfile
@@ -38,6 +38,7 @@ gem 'rack-cors'
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem 'debug', platforms: %i[mri windows]
+  gem 'rspec-rails', '~> 6.1.0'
 end
 
 group :development do
@@ -50,6 +51,8 @@ group :development do
   gem 'rubocop-rails', require: false
   gem 'rubocop-rspec', require: false
 end
+
+gem 'simplecov', require: false, group: :test
 
 gem 'dockerfile-rails', '>= 1.6', group: :development
 
