update: フロント開発用設定追加

--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -6,5 +6,11 @@
     "prettier",
     "next",
     "next/babel"
-  ]
+  ],
+  "plugins": [
+    "unused-imports"
+  ],
+  "rules": {
+    "unused-imports/no-unused-imports": "warn"
+  }
 }
