--- a/front/.vscode/settings.json
+++ b/front/.vscode/settings.json
@@ -2,7 +2,8 @@
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
-    "source.organizeImports": true
+    "source.organizeImports": true,
+    "source.addMissingImports": true
   },
   "prettier.configPath": ".prettier.json",
   "typescript.tsdk": "node_modules/typescript/lib"
