--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,8 @@
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -34,6 +35,7 @@
     "husky": "^9.0.6",
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.4",
+    "sass": "^1.70.0",
     "typescript": "^5"
   }
 }
