--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -4,12 +4,15 @@
     "plugin:@typescript-eslint/recommended",
     "next/core-web-vitals",
     "prettier",
-    "next",
-    "next/babel"
+    "next"
   ],
-  "plugins": [
-    "unused-imports"
-  ],
+  "ignorePatterns": ["node_modules", "dist"],
+  "parserOptions": {
+    "babelOptions": {
+      "presets": ["next/babel"]
+    }
+  },
+  "plugins": ["unused-imports"],
   "rules": {
     "unused-imports/no-unused-imports": "warn"
   }
