--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
