update: RSpecの実行をGitHub Actionsではなくpre-commit hookで行うよう変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll": true,
-    "source.organizeImports": true,
-    "source.addMissingImports": true
+    "source.fixAll": "explicit",
+    "source.organizeImports": "explicit",
+    "source.addMissingImports": "explicit"
   },
   "prettier.configPath": "front/.prettier.json",
   "typescript.tsdk": "front/node_modules/typescript/lib"
