update: lintチェック・テストをpre-commitに統一

--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "lint-staged": {
-    "front/**/*.{ts,tsx}": [
+    "*.{ts,tsx}": [
       "eslint",
       "prettier --write"
     ]
