--- a/front/package.json
+++ b/front/package.json
@@ -32,9 +32,9 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lefthook": "^1.6.1",
     "prettier": "^3.2.4",
     "sass": "^1.70.0",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
