--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,7 +4,12 @@ pre-commit:
     frontend:
       root: front/
       glob: "*.{ts,tsx}"
-      run: yarn eslint {staged_files} && yarn prettier --write {staged_files} && yarn test
+      run: |
+        docker compose exec -T front yarn eslint {staged_files} &&
+        docker compose exec -T front yarn prettier --write {staged_files} &&
+        docker compose exec -T front yarn test --passWithNoTests
     backend:
       root: back/
-      run: docker compose -f ./compose.yml exec -T back bundle exec rubocop -A && docker compose -f ./compose.yml exec -T back bundle exec rspec
+      run: |
+        docker compose exec -T back bundle exec rubocop -A &&
+        docker compose exec -T back bundle exec rspec
