--- a/front/package.json
+++ b/front/package.json
@@ -37,5 +37,8 @@
     "sass": "^1.70.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "resolutions": {
+    "string-width": "4.2.3"
   }
 }
