fix: GitHub Actions実行時もアップグレードされたyarnで実行できるよう修正

--- a/.github/workflows/front_coverage.yml
+++ b/.github/workflows/front_coverage.yml
@@ -15,6 +15,10 @@ jobs:
         run: yarn install
         working-directory: front
 
+      - name: Upgrade Dependencies
+        run: yarn upgrade
+        working-directory: front
+
       - name: Run Test
         run: yarn run test:coverage --passWithNoTests
         working-directory: front
