--- a/back/fly.toml
+++ b/back/fly.toml
@@ -34,8 +34,5 @@ console_command = "/rails/bin/rails console"
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 256
-
-[processes]
-  app = "bin/rails server"
-  worker = "bundle exec rake solid_queue:start"
+  memory = "1gb"
+  size = "shared-cpu-1x"
