--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,9 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.2.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.2.1",
     "axios": "^1.6.7",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
@@ -39,5 +42,6 @@
     "sass": "^1.70.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "license": "MIT"
 }
