--- a/front/package.json
+++ b/front/package.json
@@ -40,6 +40,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.4",
     "sass": "^1.70.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
