--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,8 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.1.0",
+    "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -32,6 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
