--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "source.addMissingImports": "explicit"
   },
   "prettier.configPath": "front/.prettier.json",
-  "typescript.tsdk": "front/node_modules/typescript/lib"
+  "typescript.tsdk": "front/node_modules/typescript/lib",
+  "eslint.workingDirectories": ["front"]
 }
