--- a/front/package.json
+++ b/front/package.json
@@ -21,10 +21,12 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-ztext": "^1.0.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
