--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@tsparticles/slim": "^3.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jsonapi-serializer": "^3.6.9",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
@@ -39,6 +40,7 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
+    "@types/jsonapi-serializer": "^3.6.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
