fix: トップページ・フッターレイアウト崩れ修正 #100

--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -21,8 +21,8 @@ jobs:
           debug: false
           review_simple_changes: false
           review_comment_lgtm: false
-          openai_light_model: gpt-4
-          openai_heavy_model: gpt-4
+          openai_light_model: gpt-3.5-turbo # 要約用モデル
+          openai_heavy_model: gpt-3.5-turbo # レビュー用モデル
           openai_timeout_ms: 900000 # 15分
           language: ja-JP
           path_filters: |
