update: Aceternity UI導入 #98

--- a/front/package.json
+++ b/front/package.json
@@ -16,17 +16,20 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@tsparticles/engine": "^3.2.1",
+    "@tabler/icons-react": "^2.47.0",
+    "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.2.1",
+    "@tsparticles/slim": "^3.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "jsonapi-serializer": "^3.6.9",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.0.1",
     "react-ztext": "^1.0.3",
     "tailwind-merge": "^2.2.1",
