--- a/front/package.json
+++ b/front/package.json
@@ -68,5 +68,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
+  "resolutions": {
+    "string-width": "4.2.3"
+  },
   "license": "MIT"
 }
