--- a/back/Gemfile
+++ b/back/Gemfile
@@ -40,6 +40,7 @@ group :development, :test do
   gem 'debug', platforms: %i[mri windows]
   gem 'factory_bot_rails'
   gem 'rspec-rails', '~> 6.1.0'
+  gem 'simplecov', require: false
 end
 
 group :development do
@@ -66,3 +67,5 @@ gem 'jwt'
 gem 'jsonapi-serializer'
 
 gem 'pundit'
+
+gem 'faraday'
