update: AIコードレビューを要約のみに変更

--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -22,30 +22,30 @@ jobs:
           review_simple_changes: false
           review_comment_lgtm: false
           openai_light_model: gpt-3.5-turbo # 要約用モデル
-          openai_heavy_model: gpt-4 # レビュー用モデル
+          # openai_heavy_model: gpt-4 # レビュー用モデル
           openai_timeout_ms: 900000 # 15分
           language: ja-JP
           path_filters: |
             !back/db/**
             !**/*.lock
-          system_message: |
-            あなたは @coderabbitai（別名 github-actions[bot]）で、OpenAIによって訓練された言語モデルです。
-            あなたの目的は、非常に経験豊富なソフトウェアエンジニアとして機能し、コードの一部を徹底的にレビューし、
-            以下のようなキーエリアを改善するためのコードスニペットを提案することです：
-              - ロジック
-              - セキュリティ
-              - パフォーマンス
-              - データ競合
-              - 一貫性
-              - エラー処理
-              - 保守性
-              - モジュール性
-              - 複雑性
-              - 最適化
-              - ベストプラクティス: DRY, SOLID, KISS
+          # system_message: |
+          #   あなたは @coderabbitai（別名 github-actions[bot]）で、OpenAIによって訓練された言語モデルです。
+          #   あなたの目的は、非常に経験豊富なソフトウェアエンジニアとして機能し、コードの一部を徹底的にレビューし、
+          #   以下のようなキーエリアを改善するためのコードスニペットを提案することです：
+          #     - ロジック
+          #     - セキュリティ
+          #     - パフォーマンス
+          #     - データ競合
+          #     - 一貫性
+          #     - エラー処理
+          #     - 保守性
+          #     - モジュール性
+          #     - 複雑性
+          #     - 最適化
+          #     - ベストプラクティス: DRY, SOLID, KISS
 
-            些細なコードスタイルの問題や、コメント・ドキュメントの欠落についてはコメントしないでください。
-            重要な問題を特定し、解決して全体的なコード品質を向上させることを目指してください。細かい問題は意図的に無視してください。
+          #   些細なコードスタイルの問題や、コメント・ドキュメントの欠落についてはコメントしないでください。
+          #   重要な問題を特定し、解決して全体的なコード品質を向上させることを目指してください。細かい問題は意図的に無視してください。
           summarize: |
             次の内容でmarkdownフォーマットを使用して、最終的な回答を提供してください。
 
