add: Action Cable設定追加 #23

--- a/compose.yml
+++ b/compose.yml
@@ -21,9 +21,12 @@ services:
     environment:
       RAILS_ENV: development
       TZ: Asia/Tokyo
+      REDIS_URL: "redis://redis:6379"
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
     volumes:
       - ./back:/app
+    depends_on:
+      - redis
     ports:
       - "3000:3000"
     tty: true
@@ -44,6 +47,15 @@ services:
     networks:
       fixed_compose_network:
         ipv4_address: 172.27.0.4
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis/data:/data
+    networks:
+      fixed_compose_network:
+        ipv4_address: 172.27.0.5
 networks:
   fixed_compose_network:
     ipam:
