--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@rails/actioncable": "^7.1.3-2",
     "@tabler/icons-react": "^2.47.0",
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
@@ -47,6 +48,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonapi-serializer": "^3.6.8",
     "@types/node": "^20",
+    "@types/rails__actioncable": "^6.1.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
