--- a/back/config/cable.yml
+++ b/back/config/cable.yml
@@ -7,5 +7,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= Rails.application.credentials.dig(:redis, :url) %>
   channel_prefix: app_production
