--- a/back/fly.toml
+++ b/back/fly.toml
@@ -9,13 +9,30 @@ console_command = "/rails/bin/rails console"
 
 [build]
 
-[http_service]
+[[services]]
   internal_port = 3000
+  protocol = "tcp"
   force_https = true
   auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+
+  [[services.ports]]
+    handlers = ["http"]
+    port = "80"
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = "443"
+
+  [[services.tcp_checks]]
+    interval = "10s"
+    timeout = "2s"
 
 [checks]
   [checks.status]
