--- a/back/Gemfile
+++ b/back/Gemfile
@@ -5,8 +5,8 @@ ruby '3.2.2'
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem 'rails', '~> 7.1.3'
 
-# Use mysql as the database for Active Record
-gem 'mysql2', '~> 0.5'
+# Use postgresql as the database for Active Record
+gem 'pg', '~> 1.1'
 
 # Use the Puma web server [https://github.com/puma/puma]
 gem 'puma', '>= 5.0'
