--- a/back/config/database.yml
+++ b/back/config/database.yml
@@ -1,34 +1,19 @@
-# MySQL. Versions 5.5.8 and up are supported.
-#
-# Install the MySQL driver
-#   gem install mysql2
-#
-# Ensure the MySQL gem is defined in your Gemfile
-#   gem "mysql2"
-#
-# And be sure to use new-style password hashing:
-#   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
-#
 default: &default
-  adapter: mysql2
-  encoding: utf8mb4
-  port: 3306
+  adapter: postgresql
+  encoding: utf8
+  port: 5432
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  username: <%= Rails.application.credentials.dig(:planetscale, :development, :username) %>
-  password: <%= Rails.application.credentials.dig(:planetscale, :development, :password) %>
-  database: <%= Rails.application.credentials.dig(:planetscale, :development, :database) %>
-  host: <%= Rails.application.credentials.dig(:planetscale, :development, :host) %>
-  ssl_mode: :verify_identity
-  sslca: "/etc/ssl/certs/ca-certificates.crt"
+  username: root
+  password: password
+  database: app_development
+  host: db
 
 production:
   <<: *default
-  username: <%= Rails.application.credentials.dig(:planetscale, :production, :username) %>
-  password: <%= Rails.application.credentials.dig(:planetscale, :production, :password) %>
-  database: <%= Rails.application.credentials.dig(:planetscale, :production, :database) %>
-  host: <%= Rails.application.credentials.dig(:planetscale, :production, :host) %>
-  ssl_mode: :verify_identity
-  sslca: "/etc/ssl/certs/ca-certificates.crt"
+  username: <%= Rails.application.credentials.dig(:postgresql, :production, :username) %>
+  password: <%= Rails.application.credentials.dig(:postgresql, :production, :password) %>
+  database: <%= Rails.application.credentials.dig(:postgresql, :production, :database) %>
+  host: <%= Rails.application.credentials.dig(:postgresql, :production, :host) %>
