fix: fly.ioへのデプロイ自動化が失敗するため、fly.toml修正

--- a/back/fly.toml
+++ b/back/fly.toml
@@ -13,52 +13,44 @@ console_command = '/rails/bin/rails console'
   source = 'idea_space_trip_db'
   destination = '/data'
 
-[http_service]
+[[services]]
   internal_port = 3000
+  protocol = "tcp"
   force_https = true
   auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
-
-[[services]]
-  protocol = 'tcp'
-  internal_port = 3000
-  auto_stop_machines = false
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
-
-[[services.ports]]
-    port = 80
-    handlers = ['http']
-
-[[services.ports]]
-    port = 443
-    handlers = ['tls', 'http']
+  processes = ["app"]
 
   [services.concurrency]
     hard_limit = 25
     soft_limit = 20
 
-[[services.tcp_checks]]
-    interval = '10s'
-    timeout = '2s'
+  [[services.ports]]
+    handlers = ["http"]
+    port = "80"
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = "443"
+
+  [[services.tcp_checks]]
+    interval = "10s"
+    timeout = "2s"
 
 [checks]
   [checks.status]
     port = 3000
-    type = 'http'
-    interval = '10s'
-    timeout = '2s'
-    grace_period = '5s'
-    method = 'GET'
-    path = '/up'
-    protocol = 'http'
+    type = "http"
+    interval = "10s"
+    timeout = "2s"
+    grace_period = "5s"
+    method = "GET"
+    path = "/up"
+    protocol = "http"
     tls_skip_verify = false
-
     [checks.status.headers]
-      X-Forwarded-Proto = 'https'
+      X-Forwarded-Proto = "https"
 
 [[vm]]
   size = 'shared-cpu-1x'
