add: マイページにてアカウント表示、削除処理ができるよう実装 #86

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -13,3 +13,6 @@ pre-commit:
       run: |
         docker compose exec -T back bundle exec rubocop -A &&
         docker compose exec -T back bundle exec rspec
+    staging:
+      run: |
+        git add {staged_files}
