--- a/front/components.json
+++ b/front/components.json
@@ -5,8 +5,8 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/app/global.scss",
-    "baseColor": "slate",
+    "css": "src/app/globals.scss",
+    "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
   },
