--- a/back/Gemfile
+++ b/back/Gemfile
@@ -56,6 +56,10 @@ group :development do
   gem 'bullet'
 end
 
+group :test do
+  gem 'shoulda-matchers', '~> 6.0'
+end
+
 gem 'dockerfile-rails', '>= 1.6', group: :development
 
 gem 'redis', '~> 5.0'
