--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hot-toast": "^2.4.1",
