fix: サーバーサイドでデバイス検知できるよう修正 #199

--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
+    "@types/ua-parser-js": "^0.7.39",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
@@ -35,13 +36,13 @@
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "react": "^18",
-    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^1.0.37",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
