add: AiGeneratedAnswerモデルスペック追加

--- a/back/lib/data/prompts.yml
+++ b/back/lib/data/prompts.yml
@@ -72,7 +72,7 @@ idea_prompt_template: |
     "代用": {
       "「書く対象」の代用": "従来の紙だけでなく、スマートフォンやタブレットなどのデジタルデバイスの画面上にも書き込めるボールペンを開発する",
       "「素材」の代用": "環境に配慮し、竹や再生プラスチックなどのサステナブルな素材を使用して、従来のプラスチック製ボールペンと同等の性能を持つボールペンを提供する",
-      "「インク」の代用": "従来のインクに代わり、香りつきインクや温度や湿度によって色が変化する特殊なインクを使用し、ユーザーに新しい書き体験を提供す。"
+      "「インク」の代用": "従来のインクに代わり、香りつきインクや温度や湿度によって色が変化する特殊なインクを使用し、ユーザーに新しい書き体験を提供する"
     },
     "結合": {
       "「他の文房具」と結合": "ボールペンに加えて鉛筆や消しゴムが一体となったマルチツールを開発し、ユーザーが様々な用途に対応できるようにする",
