--- a/back/.rubocop.yml
+++ b/back/.rubocop.yml
@@ -64,3 +64,7 @@ Metrics/BlockLength:
     - "db/seeds.rb"
     - "spec/**/*"
     - "config/**/*"
+
+# itブロック内で複数のexpectを許可
+RSpec/MultipleExpectations:
+  Enabled: false
