--- a/back/Dockerfile.dev
+++ b/back/Dockerfile.dev
@@ -1,5 +1,5 @@
-# ruby 3.2.2 の公式イメージをベースイメージとして使用
-FROM ruby:3.2.2
+# ruby  の公式イメージをベースイメージとして使用
+FROM ruby:3.4.4
 
 # コンテナ内の作業ディレクトリを /app に設定
 WORKDIR /app
