--- a/back/Gemfile
+++ b/back/Gemfile
@@ -1,9 +1,9 @@
 source 'https://rubygems.org'
 
-ruby '3.2.2'
+ruby '3.4.4'
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
-gem 'rails', '~> 7.1.3'
+gem 'rails', '7.2.2.1'
 
 # Use postgresql as the database for Active Record
 gem 'pg', '~> 1.1'
@@ -37,18 +37,20 @@ gem 'rack-cors'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
-  gem 'debug', platforms: %i[mri windows]
+  gem 'debug', platforms: %i[mri windows], require: 'debug/prelude'
+  # Static analysis for security vulnerabilities [https://brakemanscanner.org/]
+  gem 'brakeman', require: false
   gem 'factory_bot_rails'
   gem 'rspec-rails', '~> 6.1.0'
+  gem 'rubocop-rails-omakase', require: false
   gem 'simplecov', require: false
 end
 
 group :development do
-  # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
-  # gem "spring"
   gem 'annotate'
   # Lint
   gem 'rubocop', require: false
+  gem 'rubocop-factory_bot', require: false
   gem 'rubocop-performance', require: false
   gem 'rubocop-rails', require: false
   gem 'rubocop-rspec', require: false
@@ -64,7 +66,7 @@ gem 'dockerfile-rails', '>= 1.6', group: :development
 
 gem 'redis', '~> 5.0'
 
-gem 'solid_queue'
+gem 'solid_queue', '0.6.0'
 
 gem 'jwt'
 
@@ -73,3 +75,5 @@ gem 'jsonapi-serializer'
 gem 'pundit'
 
 gem 'faraday'
+
+gem 'benchmark'
